--- a/public/world/00_world/index.html
+++ b/public/world/00_world/index.html
@@ -1354,19 +1354,14 @@
 
 
 <h1 id="the-world-of-chiania">The World of Chiania</h1>
-<p>TODO Description of the word. World maps and so on.</p>
+<p>TODO Description of the word. World maps and so on.
+- <a href="../01_map/">World Map</a>
+- <a href="../salvia/00_salvia_main_continent/">Salvia - Main Continent (Forests)</a>
+    - <a href="../salvia/01_viridis_main_city/">Viridis - Main City</a>
+    - <a href="../salvia/02_nigreos_black_forest/">Nigreos - Black Forest</a>
+    - <a href="../salvia/03_serunt_western_woods/">Serunt - Western Woods</a></p>
 <ul>
-<li>
-<p><a href="../salvia/00_salvia_main_continent/">Salvia - Main Continent (Forests)</a></p>
-<ul>
-<li><a href="../salvia/01_viridis_main_city/">Viridis - Main City</a></li>
-<li><a href="../salvia/02_nigreos_black_forest/">Nigreos - Black Forest</a></li>
-<li><a href="../salvia/03_serunt_western_woods/">Serunt - Western Woods</a></li>
-</ul>
-</li>
-<li>
-<p><a href="../aquarum/00_aquarum_lakes/">Aquarum - Land of Rivers and lakes</a></p>
-</li>
+<li><a href="../aquarum/00_aquarum_lakes/">Aquarum - Land of Rivers and lakes</a></li>
 <li><a href="../glacies/00_glacies_iceland/">Glacies - the ice land</a></li>
 <li><a href="../harenae/00_harenae_desert/">Harenae - the desert</a></li>
 </ul>
