--- a/public/index.html
+++ b/public/index.html
@@ -1647,7 +1647,7 @@ The stats of you character are rerolled at each quest. So your character can hav
 <h2 id="mimics-bot-functions-in-discord-so-far">Mimic's Bot Functions in Discord (so far)</h2>
 <p>Mimic understands a few "magic words". You can talk to mimic anytime and make some spells.</p>
 <h3 id="combat">Combat</h3>
-<p><code>!hunt</code> : Go hunting for monsters on your current location</p>
+<p><code>!hunt</code> : Go hunting for monsters on your current location. You hant whatever monsters can be found at your current location. Maybe check your current location first <code>!look</code> and your <code>!profile</code> before you go hunting. If you die angainst a monster It will last 3 hours until the <a href="03_characters#goddess-of-chiania">Goddess of Chiania</a> can revive you.</p>
 <h3 id="location">Location</h3>
 <p><code>!look</code>: Gives a description of the place around you. Says what you can do here and what direction you can go next.</p>
 <p><code>!go (north|south|east|west)</code>: Example <code>go east</code>: Move your character. Look at the <a href="world/01_map/">World Map</a> for reference</p>
