--- a/public/world/01_world_map/index.html
+++ b/public/world/01_world_map/index.html
@@ -1346,6 +1346,7 @@
 <ul>
 <li><a href="../salvia/00_salvia_main_continent/">Salvia - Main Continent</a></li>
 </ul>
+<p><img alt="Continents" src="../include/world_continents.drawio.svg" /></p>
 
               
             </article>
