--- a/public/world/salvia/00_salvia_main_continent/index.html
+++ b/public/world/salvia/00_salvia_main_continent/index.html
@@ -1355,7 +1355,7 @@
 </ul>
 <div class="map_background" style="background-image: url(../include/map-background-overgrown-temple.png); background-repeat: no-repeat; background-size: cover;padding:10px;">
 <p>Salvia the Main Continent</p>
-<p><img alt="" src="../../include/chiania_world_map.drawio.svg" /></p>
+<p><img alt="" src="../include/salvia_map.drawio.svg" /></p>
 </div>
 <ul>
 <li>TODO Add maps for different continents</li>
