--- a/public/items/90_BraveSeedling/index.html
+++ b/public/items/90_BraveSeedling/index.html
@@ -3467,6 +3467,16 @@
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://uaz44zegdkmktvvldajxnjvl6feaw4d3ksgdeupao2rkxxuu.arweave.net/oDPOZIYamKnWqxgTd-q-ar8U-gLcHtUjDJR4Haiq96U"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xb62f8e1af7337ccf9f5cdaaf3be45fac2d0aa793dd4843ed59b983fe549ca921"><strong>Name:</strong> Brave Seedling #243</a></div>
+<div><strong>Collection:</strong> Brave Seedling</div>
+<div><strong>background:</strong> forest brown</div>
+<div><strong>decoration:</strong> none</div>
+<div><strong>seedling:</strong> yellow withered</div>
+<div><strong>soil:</strong> amethyst</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://kq57s6gkvm4w6nimkztivkfdve3ojwpvifa7l7mugcmbmywble.arweave.net/VDv5eMqrOW81DFZmiqijqTbk2fVBQfX9l_DCYFmLBWY"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x3035d652bc203c123acea3771e998c90394a14ddffc5fec4be907c21f7387f7a"><strong>Name:</strong> Brave Seedling #244</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
@@ -6761,16 +6771,6 @@
 <div><strong>background:</strong> forest brown</div>
 <div><strong>decoration:</strong> none</div>
 <div><strong>seedling:</strong> green health</div>
-<div><strong>soil:</strong> moon well</div>
-<div><strong>Description:</strong> </div>
-</div>
-<div class="item_thumbnail_detail">
-<img src="https://ybmxtqovb2gkddvblaws6qwyah4wyp33bfzgmmwwpjfvehoe.arweave.net/wFl5wdUOjKGOoVgtL0LY--AflsP3sJcmYy1npLUh3Ek"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0x79ad35f99ab93c4b79e247a040fa497073fe1a7b6f3cf8d9a7be5ad5ea2900a5"><strong>Name:</strong> Brave Seedling #573</a></div>
-<div><strong>Collection:</strong> Brave Seedling</div>
-<div><strong>background:</strong> forest brown</div>
-<div><strong>decoration:</strong> yellow spots</div>
-<div><strong>seedling:</strong> purple variation</div>
 <div><strong>soil:</strong> moon well</div>
 <div><strong>Description:</strong> </div>
 </div>
