--- a/public/items/50_types/index.html
+++ b/public/items/50_types/index.html
@@ -1392,7 +1392,7 @@
 <div><strong>Item Type:</strong> <a href="../90_Deer">Deer</a></div>
 <div><strong>Accessory:</strong> None</div>
 <div><strong>Antlers:</strong> Small</div>
-<div><strong>background:</strong> Flat (Lavender)</div>
+<div><strong>Background:</strong> Flat (Lavender)</div>
 <div><strong>Deer:</strong> Topaz</div>
 <div><strong>Eye:</strong> Blue</div>
 <div><strong>Fur:</strong> Topaz</div>
@@ -1493,7 +1493,7 @@
 <div><strong>Slash:</strong> 5</div>
 </div>
 <div class="item_thumbnail">
-<img src="https://nlw33pw4fgldbxdwsayln63luxi5pu3c7kdscrg2nmjbodzx.arweave.net/au29v_twpljDcdpAwtvtrpdHX0_2L6hyFE2msSFw83E"><br/>
+<img src="https://vturlmxazoxjvcxvob3syr23busmfgvahef4qdtzk4kvpuambafq.arweave.net/rOkVsuDLrpqK9XB3LEdbDSTCmqA5C8gOeVcVV9AMCAs"><br/>
 <div><strong>Collection:</strong> <a href="">Chia Inventory</a></div>
 <div><strong>Item Type:</strong> <a href="../90_ShortAxe">Short Axe</a></div>
 <div><strong>Bash:</strong> 1</div>
@@ -1516,7 +1516,7 @@
 <div><strong>Collection:</strong> <a href="">Sheesh! Snail</a></div>
 <div><strong>Item Type:</strong> <a href="../90_snail">snail</a></div>
 <div><strong>antenna:</strong> 1/5</div>
-<div><strong>background:</strong> 1/5</div>
+<div><strong>Background:</strong> 1/5</div>
 <div><strong>body:</strong> 1/5</div>
 <div><strong>shell:</strong> 1/5</div>
 </div>
