--- a/public/ideas/dev_stuff/character_system/index.html
+++ b/public/ideas/dev_stuff/character_system/index.html
@@ -1427,7 +1427,12 @@
 
 <h1 id="character-species-system">Character Species System</h1>
 <h2 id="usage-of-class-inheritance">Usage of class inheritance</h2>
-<p>I don't know how classes work now but here some ideas that could make life easier. We want support different species so character types could make great use of Class inheritance in python</p>
+<p>I don't know how classes work now but here some ideas that could make life easier. We want support different species so character types could make great use of Class inheritance in python.</p>
+<p>Code Examples would be:</p>
+<ul>
+<li><a href="https://github.com/RudolfAchter/chiania/blob/main/docs/ideas/dev_stuff/code/character_system.py">https://github.com/RudolfAchter/chiania/blob/main/docs/ideas/dev_stuff/code/character_system.py</a></li>
+<li><a href="https://github.com/RudolfAchter/chiania/blob/main/docs/ideas/dev_stuff/code/character_system.test.py">https://github.com/RudolfAchter/chiania/blob/main/docs/ideas/dev_stuff/code/character_system.test.py</a></li>
+</ul>
 <pre class="mermaid"><code>classDiagram
 
     chianiaEntity &lt;|-- chianiaChar
