split maps into smaller chunks -> publish

--- a/public/world/salvia/00_salvia_main_continent/index.html
+++ b/public/world/salvia/00_salvia_main_continent/index.html
@@ -1420,7 +1420,9 @@
 
 <h1 id="salvia-main-continent">Salvia - Main Continent</h1>
 <ul>
-<li>TODO continue working on map for Salvia - Main Continent</li>
+<li><a href="salvia/01_viridis_main_city.md">Viridis - Main City</a></li>
+<li><a href="salvia/02_nigreos_black_forest.md">Nigreos - Black Forest</a></li>
+<li><a href="salvia/03_serunt_western_woods.md">Serunt - Western Woods</a></li>
 </ul>
 <div class="map_background" style="background-image: url(../include/map-background-overgrown-temple.png); background-repeat: no-repeat; background-size: cover;padding:10px;">
 <p>Salvia the Main Continent</p>
