--- a/public/world/00_world/index.html
+++ b/public/world/00_world/index.html
@@ -1423,7 +1423,7 @@
 
 
 <h1 id="the-world-of-chiania">The World of Chiania</h1>
-<p>TODO Description of the word. World maps and so on...</p>
+<p><strong>All players start in <a href="../salvia/01_viridis_main_city/">Viridis - Main City</a></strong> so this should be the first map to look at.</p>
 <ul>
 <li><a href="../01_world_map/">World Map</a></li>
 <li>
@@ -1440,6 +1440,7 @@
 <li><a href="../glacies/00_glacies_iceland/">Glacies - the ice land</a></li>
 <li><a href="../harenae/00_harenae_desert/">Harenae - the desert</a></li>
 </ul>
+<p>TODO More Description of the word. World maps and so on...</p>
 
               
             </article>
