--- a/public/ideas/dev_stuff/randomized_dungeons/index.html
+++ b/public/ideas/dev_stuff/randomized_dungeons/index.html
@@ -1471,20 +1471,20 @@
 </ul>
 <h2 id="help-for-getting-back">Help for getting Back</h2>
 <ul>
-<li>there is a story item "soulstone" (totally stolen from world of warcraft). Or should we call it <strong>"magical chia root"</strong>?</li>
+<li>there is a story item "soulstone" (totally stolen from world of warcraft). Or should we call it <strong>"magical chia root"</strong>?<ul>
 <li>as long as players have stamina for one hunt they could use the item to be teleported back to the last tavern they rested</li>
 <li>if they have not enough stamina they would have to wait for teleport</li>
 <li>if they use teleport stamina is drained to zero and starts recovering in the tavern</li>
 </ul>
+</li>
+</ul>
 <h2 id="how-to-integrate-to-the-world">How to integrate to the world</h2>
 <ul>
 <li>dungeons could be attached somewhere to a place in the world</li>
-<li>dungeoins could be raondomized for</li>
-<li>every player<ul>
+<li>dungeoins could be raondomized for<ul>
+<li>every player</li>
 <li>so every player has its own Experience</li>
-</ul>
-</li>
-<li>or from time to time<ul>
+<li>or from time to time</li>
 <li>so the community could discover the "new" dungeon and draw maps for it as long as it exists</li>
 </ul>
 </li>
