--- a/public/ideas/dev_stuff/world_and_moving/index.html
+++ b/public/ideas/dev_stuff/world_and_moving/index.html
@@ -1498,7 +1498,8 @@
 </ul>
 </li>
 <li>there could be gates, bridges or something like that where guards want to be paid toll to let you pass</li>
-<li>you could have a coice to pay or fight</li>
+<li>you could have a coice to <code>!pay</code>, <code>!talk</code> or <code>!fight</code></li>
+<li>when you <code>!talk</code> it could be dependend on you "Charisma" value to persuade the guard to let you pass</li>
 </ul>
 
               
