--- a/public/ideas/dev_stuff/index.html
+++ b/public/ideas/dev_stuff/index.html
@@ -1462,6 +1462,9 @@
 
 <h1 id="ideas-dev-stuff">Ideas - Dev Stuff</h1>
 <p>Add your Ideas for developing chiania further here.</p>
+<ul>
+<li><a href="https://github.com/RudolfAchter/chiania/tree/main/docs/ideas/dev_stuff">https://github.com/RudolfAchter/chiania/tree/main/docs/ideas/dev_stuff</a></li>
+</ul>
 
               
             </article>
