--- a/public/ideas/dev_stuff/index.html
+++ b/public/ideas/dev_stuff/index.html
@@ -1464,6 +1464,8 @@
 <p>Add your Ideas for developing chiania further here.</p>
 <ul>
 <li><a href="https://github.com/RudolfAchter/chiania/tree/main/docs/ideas/dev_stuff">https://github.com/RudolfAchter/chiania/tree/main/docs/ideas/dev_stuff</a></li>
+<li>fork repository</li>
+<li>make pull requests</li>
 </ul>
 
               
