--- a/public/items/90_ClothArmor/index.html
+++ b/public/items/90_ClothArmor/index.html
@@ -1507,6 +1507,18 @@
 <li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
+<img src="https://sdvzurozsisn5lsmgxbwdq2np4vaw22sbivst6w7atcmiwvfna.arweave.net/kOuaR_dmSJN6uTDXDYcNNfyoLa1IKKyn63wTExFqlaI"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xd957da977659f71448c4446f7bffdbdf85265fbe9af3666ddd1e40f048a3929d"><strong>Name:</strong> Cloth Armor 106</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://gkkvxb6sxkzzr3os3hnodxoqamtuunujpjgwyza7kioafixh4pmq.arweave.net/MpVbh9K6s5jt0tna4d3QAydKNol6TWxkH1IcAqLn49k"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x844be3f343110762ff350b8104ac72467f866262721c4f48fae6a7963c05d188"><strong>Name:</strong> Cloth Armor 169</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://lpmitmgb45lgccz5ifnh7cwwhkb45ta5lvavj6ar3e6h362xwajq.arweave.net/W9iJsMHnVmELPUFaf4rWOoPOzB1dQVT4Edk8fftXsBM"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0xf7d4320d64eb3d5ca9ccede6a090895715111fd296ebaa9d5701a63d4c6d0d1f"><strong>Name:</strong> Cloth Armor 24</a></div>
 <div><strong>Collection:</strong> Chia Inventory</div>
