--- a/public/items/90_BraveSeedling/index.html
+++ b/public/items/90_BraveSeedling/index.html
@@ -8330,16 +8330,6 @@
 <div><strong>Description:</strong> Chia to the moon!</div>
 </div>
 <div class="item_thumbnail_detail">
-<img src="https://dviy3keq4rheifbkpllrtvdhahrv6qf7hw7gyddywbzzaajsqq.arweave.net/HVGNqJDkTkQUKnrXGdRnAeNfQL89vmwM-eLBzkAEyhA"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0x59980cfaceb5fcdaab01ed8c0e719a8ec2338ffe2942a2690787e4c5da4be01d"><strong>Name:</strong> Brave Seedling #712</a></div>
-<div><strong>Collection:</strong> Brave Seedling</div>
-<div><strong>background:</strong> speed forward</div>
-<div><strong>decoration:</strong> spots</div>
-<div><strong>seedling:</strong> green strong</div>
-<div><strong>soil:</strong> chia</div>
-<div><strong>Description:</strong> Chia to the moon!</div>
-</div>
-<div class="item_thumbnail_detail">
 <img src="https://qk4i5uvk5fvv5aarisfklurkisd2iolcjvbaalw2uk2d7nmfpy.arweave.net/griO0qrpa16AEUSKpdI_qRIekOWJNQgAu2qK0P7WFfg"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x8c93ac88d9b7824aeac8cf0c5e8918993e8a5ae0046628436a9a9dba29735b8b"><strong>Name:</strong> Brave Seedling #713</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
@@ -8813,6 +8803,15 @@
 <div><strong>soil:</strong> hard drive</div>
 <div><strong>Description:</strong> - May I borrow your hard drive？
 - Sorry, this is my farm!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://vobnzbtdebisl635ye34f6ixxrnqjm4cu6y4evd5pev3o64fdfcq.arweave.net/q4LchmMgUSX7fcE3wvkXvFsEs4KnscJUfXkrt3uFGUU"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x73f67be4702e6223d73ac57196a805da0f9a0588f7d51ff86dedc72cbe6b9b89"><strong>Name:</strong> Brave Seedling #76</a></div>
+<div><strong>Collection:</strong> Brave Seedling</div>
+<div><strong>drip:</strong> blue down</div>
+<div><strong>seedling:</strong> shiny green</div>
+<div><strong>soil:</strong> elon</div>
+<div><strong>Description:</strong> Humanity will reach Mars in your lifetime.</div>
 </div>
 <div class="item_thumbnail_detail">
 <img src="https://6eljjtsh5yyhzgq7giaz5x2hhkeokow3z27ho2mcrb34neaueu.arweave.net/8RaUzkfuMHyaHz-IBnt9HOojlOtvOvndpgoh3xpAUJQ"><br/>
