--- a/public/items/90_BraveSeedling/index.html
+++ b/public/items/90_BraveSeedling/index.html
@@ -3338,16 +3338,6 @@
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
-<img src="https://gq7eh2ndyo2ws4ov2nlrtllbseundgbdiqrig6njyhevav235m.arweave.net/ND_5D6aPDtWlx1dNXGa1hkSjRmCNEIoN5qcHJUFdb68"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0xec54b85802dc89ea8a0ad17deaf29772fcdeb0a8cb148e1d78d9d71fa2bc3a7c"><strong>Name:</strong> Brave Seedling #213</a></div>
-<div><strong>Collection:</strong> Brave Seedling</div>
-<div><strong>background:</strong> cosmic blue</div>
-<div><strong>decoration:</strong> caterpillar</div>
-<div><strong>seedling:</strong> green health</div>
-<div><strong>soil:</strong> green wetlands</div>
-<div><strong>Description:</strong> </div>
-</div>
-<div class="item_thumbnail_detail">
 <img src="https://igjrh2xhhdmklmlgdpwqhnr5hmndqyvhwkuhl6sxtuy4fcm7li.arweave.net/QZMT6u_c42KWxZhvtA7Y9Oxo4YqeyqHX6V50xwomfWo"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x36aea03ad12461235bd89e510de76cfc8549cc29be52a5983263d7d1f2c14702"><strong>Name:</strong> Brave Seedling #214</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
@@ -5833,6 +5823,16 @@
 <div><strong>decoration:</strong> none</div>
 <div><strong>seedling:</strong> yellow withered</div>
 <div><strong>soil:</strong> brown organic</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://iwhxgyybwmgu4bt2skn4z32btuzvetfc6fvaudqvizr2foioku.arweave.net/RY-9zYwGzDU4GepKbzO9BnTNSTKLxagoOFUZjorkOVY"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x91e405440bb4f4a925c261203e57e28c136b118fb399832a22980a7d4d8a6377"><strong>Name:</strong> Brave Seedling #462</a></div>
+<div><strong>Collection:</strong> Brave Seedling</div>
+<div><strong>background:</strong> forest brown</div>
+<div><strong>decoration:</strong> drip below</div>
+<div><strong>seedling:</strong> green strong</div>
+<div><strong>soil:</strong> moon well</div>
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
