--- a/public/items/90_ClothArmor/index.html
+++ b/public/items/90_ClothArmor/index.html
@@ -1549,6 +1549,24 @@
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://jzt5hpoazdnvimsqh3yyvfq3kerjvdaryucisib5yc2c7x3i.arweave.net/TmfTvcDI21QyUD7xipYbUS_KajBH-FBIkgPcC0-L99o"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x520da46334f08b34ba0d246d6d8082531aa072a71b079103b9e0a8425f2516bc"><strong>Name:</strong> Cloth Armor 54</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://w2vxdj3wcme5gbqpvlia2axnesxe4uut62g6cvimu6hmbvgk4i6a.arweave.net/tqtxp3YTCdMGD6rQDQLtJK5OUpP2jeFVDKeOwNTK4jw"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x660e0c6285d147cf01323af31365a5732636f3c3bbc6960b21b7a0b6c113cc7b"><strong>Name:</strong> Cloth Armor 62</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://42myy2srhbmwxugcj2ug3f3qoq2vbi3aheogzisdswmik3zs.arweave.net/5pmMalE4WWvQwk_6obZdwdDVQo2A5HGyiQ5WYhW8_yM"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x660331ae3074260e1dbd6c427655960a624c1355e1e597a2c47f9dbd94b86736"><strong>Name:</strong> Cloth Armor 67</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://xdwr5zav4efbqqqfxhvv7orwd2gtvswktnmxu7ab2ciyvmhq24.arweave.net/uO0e5BXhChhCBbnrX_7o2Ho06ysqbWXp8AdCRirDw14"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0xcc813dd647b1ce94e5d5b2d1d7c74c448e1be9d67c1ee7bfa419ae2f5235e6c4"><strong>Name:</strong> Cloth Armor 86</a></div>
 <div><strong>Collection:</strong> Chia Inventory</div>
