--- a/public/items/90_ClothArmor/index.html
+++ b/public/items/90_ClothArmor/index.html
@@ -1507,8 +1507,20 @@
 <li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
+<img src="https://5tjmytztq3rpbzcjt3jt6djnttya4pl2wzrbvhs5xz5stiifzuda.arweave.net/7NLMTzOG4vDkSZ7TPw0tnPAOPXq2YhqeXb57KaEFzQY"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x4ad34ce1567a5c19ba76cc5013ebd579bfe54dcffd6505c4dd6bd4b72e83f858"><strong>Name:</strong> Cloth Armor 101</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://sdvzurozsisn5lsmgxbwdq2np4vaw22sbivst6w7atcmiwvfna.arweave.net/kOuaR_dmSJN6uTDXDYcNNfyoLa1IKKyn63wTExFqlaI"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0xd957da977659f71448c4446f7bffdbdf85265fbe9af3666ddd1e40f048a3929d"><strong>Name:</strong> Cloth Armor 106</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://k3n52aotzem7gm2tfhbetskhjnlqof6vsfqrgugfqhjwljkaf5hq.arweave.net/VtvdAdPJGfMzUynCSclHS1cHF9WRYRNQxYHTZaVAL08"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x74b84f12b53fa90ec43d70c174d2ee6c211faae3ce03e32f24d86aa1ccce7f30"><strong>Name:</strong> Cloth Armor 135</a></div>
 <div><strong>Collection:</strong> Chia Inventory</div>
 <div><strong>Description:</strong> </div>
 </div>
@@ -1569,6 +1581,12 @@
 <div class="item_thumbnail_detail">
 <img src="https://xdwr5zav4efbqqqfxhvv7orwd2gtvswktnmxu7ab2ciyvmhq24.arweave.net/uO0e5BXhChhCBbnrX_7o2Ho06ysqbWXp8AdCRirDw14"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0xcc813dd647b1ce94e5d5b2d1d7c74c448e1be9d67c1ee7bfa419ae2f5235e6c4"><strong>Name:</strong> Cloth Armor 86</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Description:</strong> </div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://4vennfhpeks2cb4vimndfmjwcimagcnyarpouev2bdkutsvkqjma.arweave.net/5UjWlO8ipaEHlUMaMrE2EhgDCbgEXuoSugjVScqqglg"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x9a2e7ffa9056ffc1c6b533874a2f79eafb1b3b856b2c415dbd9d108fe211d5b9"><strong>Name:</strong> Cloth Armor 88</a></div>
 <div><strong>Collection:</strong> Chia Inventory</div>
 <div><strong>Description:</strong> </div>
 </div>
