--- a/public/items/50_types/index.html
+++ b/public/items/50_types/index.html
@@ -1548,9 +1548,10 @@
 <div><strong>Weight:</strong> 82</div>
 </div>
 <div class="item_thumbnail">
-<img src="https://5tjmytztq3rpbzcjt3jt6djnttya4pl2wzrbvhs5xz5stiifzuda.arweave.net/7NLMTzOG4vDkSZ7TPw0tnPAOPXq2YhqeXb57KaEFzQY"><br/>
+<img src="https://wxmn223xyouoqsgmus43lztesze2howdd73tm4b2rbpw4iokxmfa.arweave.net/tdjda3fDqOhIzKS5teZklkmjusMf9zZwOohfbiHKuwo"><br/>
 <div><strong>Collection:</strong> <a href="">Chia Inventory</a></div>
 <div><strong>Item Type:</strong> <a href="../90_ClothArmor">Cloth Armor</a></div>
+<div><strong>Defence:</strong> 1</div>
 </div>
 <div class="item_thumbnail">
 <img src="https://3hyv6canzscvnkhafiw5tgzucooeuvdabvrwpgmhs6xgr4m5l4ta.arweave.net/2fFfCA3MhVao4Cot2Zs0E5xKVGANY2eZh5euaPGdXyY"><br/>
@@ -1635,7 +1636,7 @@
 <div><strong>Constitution:</strong> 1</div>
 </div>
 <div class="item_thumbnail">
-<img src="https://ei3xooyi2f3nzyakfxgolovleanjfz4fqpgbxr2icbt6lbr3.arweave.net/Ijd3OwjRdtzgCi-3M5bqrIBqS54WDzBvHSBBn5_YY70"><br/>
+<img src="https://usr4kfmhsgxhspcdwhkrc3dhc5ns6tvwr2d4ic4jqve2ffn4igmq.arweave.net/pKPFFYeRrnk8Q7HVEWxnF1svTraOh8QLiYVJopW8QZk"><br/>
 <div><strong>Collection:</strong> <a href="">Chia Inventory</a></div>
 <div><strong>Item Type:</strong> <a href="../90_PurpleNucleiKnife">Purple Nuclei Knife</a></div>
 <div><strong>Pierce:</strong> 1</div>
@@ -1666,7 +1667,7 @@
 <div><strong>Slash:</strong> 2</div>
 </div>
 <div class="item_thumbnail">
-<img src="https://wysajenhpma4zibrrs6vus7bx56sn2sgezkmye6ct25rephgdu.arweave.net/t_iQEkad7AcygMYy9Wkvhv30m6kYmVMwTwp67EjzmHc"><br/>
+<img src="https://mhrslttczhebs6uvexv4qlpj6tpqtom27eawplxiuhtt6npwwodq.arweave.net/YeMlzmLJyBl6lSXryC3p9N8JuZr5AWeu6KHnPzX2s4c"><br/>
 <div><strong>Collection:</strong> <a href="">Chia Inventory</a></div>
 <div><strong>Item Type:</strong> <a href="../90_ShortBow">Short Bow</a></div>
 <div><strong>Pierce:</strong> 2</div>
