--- a/public/items/90_PurpleNucleiKnife/index.html
+++ b/public/items/90_PurpleNucleiKnife/index.html
@@ -1507,6 +1507,15 @@
 <li>Buy Chia Inventory at the blue duck: <a href="https://dexie.space/offers/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx/xch">Dexie - Chia Inventory</a></li>
 </ul>
 <div class="item_thumbnail_detail">
+<img src="https://usr4kfmhsgxhspcdwhkrc3dhc5ns6tvwr2d4ic4jqve2ffn4igmq.arweave.net/pKPFFYeRrnk8Q7HVEWxnF1svTraOh8QLiYVJopW8QZk"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x43d7f9ff9d0ba8a5d47f0711a17c1b20724ac4d8b060a71ab2cbdd123f9648e8"><strong>Name:</strong> Purple Nuclei Knife 01</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Pierce:</strong> 1</div>
+<div><strong>Slash:</strong> 1</div>
+<div><strong>Wisdom:</strong> 1</div>
+<div><strong>Description:</strong> A knife with purple monster nuclei enhanced by the jeweler.</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://ei3xooyi2f3nzyakfxgolovleanjfz4fqpgbxr2icbt6lbr3.arweave.net/Ijd3OwjRdtzgCi-3M5bqrIBqS54WDzBvHSBBn5_YY70"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x62c7f43efef51864a7e7a892cbb8eb133a9858c05536d51d82794816da07b00b"><strong>Name:</strong> Purple Nuclei Knife 01</a></div>
 <div><strong>Collection:</strong> Chia Inventory</div>
