--- a/public/items/50_types/index.html
+++ b/public/items/50_types/index.html
@@ -1559,7 +1559,7 @@
 <div><strong>Item Type:</strong> <a href="../90_Deer">Deer</a></div>
 <div><strong>Accessory:</strong> None</div>
 <div><strong>Antlers:</strong> Small</div>
-<div><strong>Background:</strong> Flat (Lavender)</div>
+<div><strong>background:</strong> Flat (Lavender)</div>
 <div><strong>Deer:</strong> Topaz</div>
 <div><strong>Eye:</strong> Blue</div>
 <div><strong>Fur:</strong> Topaz</div>
@@ -1636,7 +1636,7 @@
 <div><strong>Constitution:</strong> 1</div>
 </div>
 <div class="item_thumbnail">
-<img src="https://ei3xooyi2f3nzyakfxgolovleanjfz4fqpgbxr2icbt6lbr3.arweave.net/Ijd3OwjRdtzgCi-3M5bqrIBqS54WDzBvHSBBn5_YY70"><br/>
+<img src="https://usr4kfmhsgxhspcdwhkrc3dhc5ns6tvwr2d4ic4jqve2ffn4igmq.arweave.net/pKPFFYeRrnk8Q7HVEWxnF1svTraOh8QLiYVJopW8QZk"><br/>
 <div><strong>Collection:</strong> <a href="">Chia Inventory</a></div>
 <div><strong>Item Type:</strong> <a href="../90_PurpleNucleiKnife">Purple Nuclei Knife</a></div>
 <div><strong>Pierce:</strong> 1</div>
@@ -1667,7 +1667,7 @@
 <div><strong>Slash:</strong> 2</div>
 </div>
 <div class="item_thumbnail">
-<img src="https://mhrslttczhebs6uvexv4qlpj6tpqtom27eawplxiuhtt6npwwodq.arweave.net/YeMlzmLJyBl6lSXryC3p9N8JuZr5AWeu6KHnPzX2s4c"><br/>
+<img src="https://wysajenhpma4zibrrs6vus7bx56sn2sgezkmye6ct25rephgdu.arweave.net/t_iQEkad7AcygMYy9Wkvhv30m6kYmVMwTwp67EjzmHc"><br/>
 <div><strong>Collection:</strong> <a href="">Chia Inventory</a></div>
 <div><strong>Item Type:</strong> <a href="../90_ShortBow">Short Bow</a></div>
 <div><strong>Pierce:</strong> 2</div>
@@ -1683,7 +1683,7 @@
 <div><strong>Collection:</strong> <a href="">Sheesh! Snail</a></div>
 <div><strong>Item Type:</strong> <a href="../90_snail">snail</a></div>
 <div><strong>antenna:</strong> 1/5</div>
-<div><strong>Background:</strong> 1/5</div>
+<div><strong>background:</strong> 1/5</div>
 <div><strong>body:</strong> 1/5</div>
 <div><strong>shell:</strong> 1/5</div>
 </div>
