--- a/public/items/90_EnhancedTreeRoot/index.html
+++ b/public/items/90_EnhancedTreeRoot/index.html
@@ -2158,6 +2158,13 @@
 <div><strong>Description:</strong> A section of tree root enhanced by the magic of master druid.</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://m4yi4czcbio6vlzsx2esqahfmg555jkwgepisnsc6653xefqqpaq.arweave.net/ZzCOCyIKHeqvMr6JKADlYbvepVYxHok2Qve7u5Cwg8E"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x4ee118746f10586b9c75a9194159b2a577967cbb6b4c53e0d441aee0cc9c077c"><strong>Name:</strong> Enhanced Tree Root 90</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Pierce:</strong> 1</div>
+<div><strong>Description:</strong> A section of tree root enhanced by the magic of master druid.</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://pargi2sn5rcvaeam43arlpups6jnehbivk5mxwhgxt2juqqe.arweave.net/eCJkak3sRVAQDObBFb6Pl5LSHCiqusv_Y5_rz0_mkIE"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x727b4f411f833dea15943f967ae9f8faa506828281ec2dcbc17654d651d6ff7b"><strong>Name:</strong> Enhanced Tree Root 91</a></div>
 <div><strong>Collection:</strong> Chia Inventory</div>
