--- a/public/items/90_BraveSeedling/index.html
+++ b/public/items/90_BraveSeedling/index.html
@@ -1760,6 +1760,15 @@
 </div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://6f4lazxii3xbmzn5ij2fdcnhvtpgb34rzoh4as7wefuwlxufmq.arweave.net/8XiwZuhG7hZlvUJ0U_YmnrN5g75HLj8BL9iFpZd6FZA"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x99b2faee3099ca7ffbab2f8dc9375239091b1329ff50074996ba1d5efde4ca29"><strong>Name:</strong> Brave Seedling #00027</a></div>
+<div><strong>Collection:</strong> Brave Seedling</div>
+<div><strong>seedling:</strong> bilibili</div>
+<div><strong>soil:</strong> moon</div>
+<div><strong>Description:</strong> 
+</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://dmoqxyb3gpqhylm3v2mddrmlfe5qhvxdog5mlz2qm56txdwire.arweave.net/Gx-0L4Dsz4Hwtm66YMcWLKTsD1uNxusXnUGd9O47IiU"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x716023b89bdcfff19ad341ddcdad81121c5c8987de4ea66626224838368b1fc9"><strong>Name:</strong> Brave Seedling #00028</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
@@ -2096,14 +2105,6 @@
 <div><strong>soil:</strong> cat dodo</div>
 <div><strong>vine:</strong> green</div>
 <div><strong>Description:</strong> My favorite cat. You have no idea how fat he is...</div>
-</div>
-<div class="item_thumbnail_detail">
-<img src="https://uymfys2bhonqflonydvzvqovtrhiilvbxmiezyxq4qla7nc4.arweave.net/phhcS0E7-mwKt_zcDrmsHVnE6ELqG7EE-zi8OQWD7Rc"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0xc89af613c0b8ff600c6cc443faee692a24dbf3649ae89e12c31a04b041ebcdba"><strong>Name:</strong> Brave Seedling #00065</a></div>
-<div><strong>Collection:</strong> Brave Seedling</div>
-<div><strong>seedling:</strong> green health</div>
-<div><strong>soil:</strong> world bank</div>
-<div><strong>Description:</strong> Chia is working with the World Bank’s Climate Change Group to support the development of the world’s first “Climate Warehouse” !</div>
 </div>
 <div class="item_thumbnail_detail">
 <img src="https://uymfys2bhonqflonydvzvqovtrhiilvbxmiezyxq4qla7nc4.arweave.net/phhcS0E7-mwKt_zcDrmsHVnE6ELqG7EE-zi8OQWD7Rc"><br/>
