--- a/public/items/90_ShadowSword/index.html
+++ b/public/items/90_ShadowSword/index.html
@@ -1515,6 +1515,15 @@
 <div><strong>Slash:</strong> 5</div>
 <div><strong>Description:</strong> A sword made with dark magic and a parasitic creature called "Shadow", is rooted on the hilt. When looking at the eye of shadow, you can feel that shadow is calling you. A sentence flashed into your mind "it belongs to me!"</div>
 </div>
+<div class="item_thumbnail_detail">
+<img src="https://qu5hfuo5icczlrdyw4a55bdiw7ivp5usk52kt4dm5tk6yienrq.arweave.net/hTpy0d1AhZXEeLcB3oRot9FX9pJXdKnwbOzV7CCN-jA"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xbf7cf1af60cf56fc46c2d225c0ce0f6d745afa0fc55091e69bff14b1ea80a625"><strong>Name:</strong> Shadow Sword</a></div>
+<div><strong>Collection:</strong> Chia Inventory</div>
+<div><strong>Magic:</strong> 3</div>
+<div><strong>Pierce:</strong> 1</div>
+<div><strong>Slash:</strong> 5</div>
+<div><strong>Description:</strong> A sword made with dark magic and a parasitic creature called "Shadow", is rooted on the hilt. When looking at the eye of shadow, you can feel that shadow is calling you. A sentence flashed into your mind "it belongs to me!"</div>
+</div>
 
               
             </article>
