--- a/public/world/salvia/02_nigreos_black_forest/index.html
+++ b/public/world/salvia/02_nigreos_black_forest/index.html
@@ -1544,7 +1544,7 @@
 
 <h1 id="nigreos-the-black-forest">Nigreos - The Black Forest</h1>
 <h2 id="map-of-nigreos">Map of Nigreos</h2>
-<div class="map_background" style="background-image: url(../include/map-background-overgrown-temple.png); background-repeat: no-repeat; background-size: cover;padding:10px;">
+<div class="map_background" style="background-image: url(../include/black-forest.lores.png); background-repeat: no-repeat; background-size: cover;padding:10px;">
 <p><img alt="" src="../include/salvia_nigreos_map.drawio.svg" /></p>
 </div>
 <h2 id="slime-forest">Slime Forest</h2>
